[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Larry Schirmer <larryschirmer@gmail.com>"]
description = "This is a sample project that uses wasm-pack, https://developer.mozilla.org/en-US/docs/WebAssembly/Rust_to_wasm"
license = "MIT/Apache-2.0"
repository = "https://github.com/larryschirmer/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"